[gd_scene load_steps=6 format=3 uid="uid://c2vmd30visipt"]

[ext_resource type="Script" uid="uid://37u673b2o74j" path="res://Main Menu/Lobby/lobby.gd" id="1_1mebg"]
[ext_resource type="FontFile" uid="uid://46hijq5aipsp" path="res://Design/Nothing.otf" id="2_xmbgm"]
[ext_resource type="Theme" uid="uid://2h6mpl5u4mvw" path="res://Design/theme.tres" id="3_fjlgs"]

[sub_resource type="LabelSettings" id="LabelSettings_1mebg"]
font = ExtResource("2_xmbgm")
font_size = 100
font_color = Color(0.94902, 0.666667, 0.298039, 1)

[sub_resource type="Environment" id="Environment_1mebg"]
background_mode = 3
tonemap_mode = 4

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1mebg")

[node name="Polygon2D2" type="Polygon2D" parent="."]
color = Color(0.0627451, 0.0941176, 0.12549, 1)
polygon = PackedVector2Array(0, 0, 720, 0, 720, 1280, 0, 1280)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 83.0
offset_right = 657.0
offset_bottom = 1281.0
theme_override_constants/separation = 50
alignment = 1

[node name="Room_code" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "123456"
label_settings = SubResource("LabelSettings_1mebg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start_game_button" type="Button" parent="VBoxContainer"]
modulate = Color(0.94902, 0.666667, 0.298039, 1)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_fjlgs")
text = "Start Game"

[node name="Main_menu_button" type="Button" parent="VBoxContainer"]
modulate = Color(0.94902, 0.666667, 0.298039, 1)
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme = ExtResource("3_fjlgs")
text = "Main Menu"

[node name="Refresh_Timer" type="Timer" parent="."]
autostart = true

[node name="Player_list" type="ItemList" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1mebg")

[connection signal="pressed" from="VBoxContainer/Start_game_button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="timeout" from="Refresh_Timer" to="." method="_on_refresh_timer_timeout"]
